--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@hookform/resolvers": "^2.8.8",
     "@supabase/supabase-auth-helpers": "^1.2.0",
     "@supabase/supabase-js": "^1.30.7",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
