--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.8.8",
     "@supabase/supabase-auth-helpers": "^1.2.0",
     "@supabase/supabase-js": "^1.30.7",
